# ibp-bstar-pathfinder

./: .gitignore  CMakeLists.txt  README.en.md  README.md  README.zh-CN.md  main.cpp  map.txt
apps/: ibp_bstar_zigzag_demo_main.cpp  pathfinding_compare_main.cpp
include/: ibp_bstar_app.hpp  ibp_bstar_core.hpp  pathfinding_algorithms.hpp  pathfinding_compare.hpp  pathfinding_grid.hpp  pathfinding_types.hpp
legacy/: IBP-B-Star_Pathfinding_PaperStrict.cpp  bfs_pathfinder.cpp  ibp_bstar.hpp
maps/: README.md  arcade1.txt  arcade2.txt  arcade3.txt  arcade4.txt  closed_goal.txt  moba1.txt  moba2.txt  one_blockers.txt  ring_obstacle.txt  testMaze.txt
scripts/: AStar-BStar New Implementation.py  pathfinding_gui.py
src/: ibp_bstar_app.cpp  ibp_bstar_core.cpp  pathfinding_algorithms.cpp  pathfinding_compare.cpp  pathfinding_grid.cpp
